--- a/css/main.css
+++ b/css/main.css
@@ -55,4 +55,9 @@ main {
   border-radius: 25px;
   font-size: 15px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+.write-btn:hover {
+  background-color: rgba(254, 111, 15, 0.8);
 }
