--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,10 +1,10 @@
 main {
-  padding: 30px 20px;
+  padding: 30px 20px 100px 20px;
 }
 
 .item-list {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 20px 0;
@@ -19,10 +19,13 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .item-list__img img {
-  width: 50px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
 }
 
 .item-list__info {
@@ -57,6 +60,7 @@ main {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   cursor: pointer;
   transition: all 1s ease-in-out;
+  text-decoration: none;
 }
 .write-btn:hover {
   background-color: rgba(254, 111, 15, 0.8);
